# tscope

./: .gitignore  Cargo.toml  LICENSE  README.md  dist-workspace.toml
ideas/remote-bridge/: README.md
src/: app.rs  claude.rs  config.rs  docker.rs  env_info.rs  main.rs  pane.rs  process.rs  service.rs  ssh.rs  theme.rs  ui.rs
