[package]
name = "t-scope"
version = "0.1.0"
edition = "2024"
description = "A terminal multiplexer with context-aware side panels for SSH, Claude Code, and service processes."
license = "MIT"
repository = "https://github.com/TrejoMF/tscope"
readme = "README.md"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
portable-pty = "0.9"
alacritty_terminal = "0.25"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs", "io-util", "time"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
notify = "7"
anyhow = "1"
dirs = "5"
libc = "0.2"
arboard = "3"

[target.'cfg(target_os = "macos")'.dependencies]
libproc = "0.14"

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
